wikigrok-proto.css
.gamePrompt {
	width: 100%;
	background-color: #DEDEDE;
	border-top: 2px #555 solid;
	padding: 1em;
}

.answerButtons {
	list-style-type: none;
	margin: 15px 0 10px 0;
	width: 100%;
}

.answerButtons li{
	display: inline;
	width: 30%;
	padding: .5em;
	background-color: #fff;
}

.gamePrompt h2 {
	margin-bottom: 15px;
}

.xOut {
	margin-top: -5px;
	float: right;
}

.mw-ui-button.mw-ui-progressive, .mw-ui-button.mw-ui-primary {
	background: #347bff;
	color: #fff;
	border: 1px solid #347bff;
	border-left: 0;
	border-right: 0;
	text-shadow: 0 1px rgba(0,0,0,.1);
}

.mw-headline {
	padding: 23px;
}

.section_heading {
	border-bottom: 1px #ccc solid;
}

.client-js .section_heading {
	position: relative;
	padding-left: 24px;
	border-bottom: solid 1px #E2E3E4;
}

.client-js .section_heading, .client-js .content_block {
	clear: both;
}

